# lesson_project

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  test_version.cpp
